@@ -1,6 +1,13 @@
 2003-12-03  Corinna Vinschen  <corinna@vinschen.de>
 
-	* fcntl.cc (_fcntl): Whitespace cleanup.
+	* fcntl.cc (fcntl_worker): Remove static storage class.
+	* flock.cc (flock): Use struct __flock64. Call fcntl_worker.
+	Use Cygwin errno functions instead of accessing errno directly.
+	* winsup.h: Declare fcntl_worker.
+
+2003-12-03  Corinna Vinschen  <corinna@vinschen.de>
+
+	* fcntl.cc: Whitespace cleanup.
 
 2003-12-03  Christopher Faylor  <cgf@redhat.com>
 
